# CHIP-8-Emulator

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: chip8.h
src/: chip8.cpp
